# alexa-os

./: .env.example  .gitignore  DEVELOPMENT.md  docker-compose.yml  livekit.yaml  test-client.html
.beads/: issues.jsonl
playground/: package-lock.json  package.json
playground/src/components/chat/: AgentMessage.tsx  AgentThinkingIndicator.tsx  ChatBubble.tsx  ChatTile.tsx  ToolCallMessage.tsx  UserMessage.tsx  UserSpeakingIndicator.tsx
playground/src/components/mcp/: ToolBadge.tsx
playground/src/components/playground/: InterruptButton.tsx  MCPPanel.tsx  ModelSelector.tsx  Playground.tsx  PlaygroundHeader.tsx  SettingsDrawer.tsx  TelemetryPanel.tsx  ToolsPanel.tsx  WakeWordIndicator.tsx
playground/src/hooks/: useAgentRpc.ts  useAgentTelemetry.ts  useMCPManagement.ts  useVoicePipeline.ts  useWakeWord.ts
server/: Dockerfile  mcp_servers.json  mcp_servers.json.example  pyproject.toml
server/src/: __init__.py  agent.py  config.py  main.py  mcp_config.py  mcp_manager.py  rpc_handlers.py  stt_whisper.py  telemetry.py  voice_pipeline.py  wake_word.py
server/src/providers/: __init__.py
server/src/scheduler/: __init__.py
server/tests/: __init__.py
